restarted; same stuff, no button

--- a/index.html
+++ b/index.html
@@ -3,91 +3,72 @@
     <head>
         <meta charset="utf-8">
         <title>Angela Li</title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla">
+        <link rel="stylesheet" href="https://font.googleapis.com/css?family=Karla">
     </head>
     <style>
         body {
             font-family: "Karla", sans-serif;
         }
-        /*navigation bar*/
+        h1 {
+            font-weight: normal;
+        }
+        h2 {
+            font-weight: normal;
+        }
+        h3 {
+            font-weight: normal;
+        }
+        h4 {
+            font-weight: normal;
+        }
+        /*navbar*/
         ul {
             list-style-type: none;
             margin: 0px;
             padding: 0px;
+            float: left;
             position: fixed;
             height: 100%;
         }
         li a {
-            /* formatting & style */
+            /* display and style*/
             display: block;
             padding-block-start: 16px;
             padding-block-end: 20px;
             padding-left: 20px;
-            width: 90px;
-            text-decoration-line: none;
+            width: 15%;
+            text-decoration: none;
             color: #222222;
         }
-        li a:hover{
-        /* interactive element */
-        color: #063FCB;
-        }
-        .navbar {
-            width: 15%;
-            float: left;
+        li a:hover {
+            /*interaction*/
+            color: #063FCB;
         }
         /*main*/
         .main {
             width: 85%;
             float: right;
         }
-        .button {
-            margin-bottom: 32px;
-            background-color: white; 
-            font-family: "Karla";
-            font-size: 16px;
-            text-align: center;
-            transition-duration: 0.45s;
-            padding: 12px 24px;
-            border-radius: 100px;
-            border: 1px solid var(--blue, #0040DD);
-            display: inline-block;
-        }
-        .button:hover {
-            border-radius: 100px;
-            border: 1px solid var(--blue, #0040DD);
-            background-color: #EAF0FF;
-        }
     </style>
     <body>
+        <!--navbar-->
         <div id="navbar">
-            <!--navigation bar-->
+            <!--unordered list-->
             <ul>
-                <li><a href="#home"><img src="angela_illustrator 1.png" alt="chibi styled drawing of a smiling girl with long brown hair" width="72px" height="103px" style="margin-bottom:5px;"></a></li>
+                <li><a href="#home"><img src="angela_illustrator 1.png" alt="chibi styled drawing of a smiling girl with long brown hair" width="72px" height="103px" style="margin-bottom: 5px"></a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#works">WORKS</a></li>
                 <li><a href="#experience">EXPERIENCE</a></li>
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
         </div>
+        <!--website content-->
         <div class="main">
             <div id="about">
-                <p style="color: #063FCB">ABOUT</p>
-                <h1>A product designer that strives to spark joy and uplift in story, interaction, and craft.</h1>
-                <h3>Currently studying @ <a style="color:#063FCB" href="https://uwaterloo.ca/">University of Waterloo</a></h3>
-                <button style="color:#063FCB" type="button" class="button">view my work</button>
+                <p style="color:#063FCB">ABOUT</p>
+                <h1>Angela is a product designer that strives to spark joy, emotion, and story through her craft.</h1>
+                <h3 style="color:#222222">Currently studying @ <a style="color: #063FCB; text-decoration: none;"href="https://uwaterloo.ca/">University of Waterloo</a></h3>
             </div>
-        </div>
-    </body>
-</html>
-        <div id="navbar">
-            <!--navigation bar-->
-            <ul>
-                <li><a href="#home"><img src="angela_illustrator 1.png" alt="chibi styled drawing of a smiling girl with long brown hair" width="72px" height="103px" style="margin-bottom:5px;"></a></li>
-                <li><a href="#about">ABOUT</a></li>
-                <li><a href="#works">WORKS</a></li>
-                <li><a href="#experience">EXPERIENCE</a></li>
-                <li><a href="#contact">CONTACT</a></li>
-            </ul>
         </div>
     </body>
 </html>
