removed main class content to begin another idea

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             float: left;
             position: fixed;
             height: 100%;
+            width: 15%;
         }
         li a {
             /* display and style*/
@@ -48,6 +49,8 @@
         .main {
             width: 85%;
             float: right;
+            margin-left: 32px;
+            margin-right: 32px;
         }
     </style>
     <body>
@@ -64,11 +67,6 @@
         </div>
         <!--website content-->
         <div class="main">
-            <div id="about">
-                <p style="color:#063FCB">ABOUT</p>
-                <h1>Angela is a product designer that strives to spark joy, emotion, and story through her craft.</h1>
-                <h3 style="color:#222222">Currently studying @ <a style="color: #063FCB; text-decoration: none;"href="https://uwaterloo.ca/">University of Waterloo</a></h3>
-            </div>
         </div>
     </body>
 </html>
