--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Angela Li</title>
-        <link rel="stylesheet" href="https://font.googleapis.com/css?family=Karla">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla">
     </head>
     <style>
         body {
@@ -21,52 +21,111 @@
         h4 {
             font-weight: normal;
         }
-        /*navbar*/
+        /*navigation bar*/
         ul {
             list-style-type: none;
             margin: 0px;
             padding: 0px;
-            float: left;
             position: fixed;
             height: 100%;
-            width: 15%;
         }
         li a {
-            /* display and style*/
+            /* formatting & style */
             display: block;
             padding-block-start: 16px;
             padding-block-end: 20px;
             padding-left: 20px;
-            width: 15%;
-            text-decoration: none;
+            width: 90px;
+            text-decoration-line: none;
             color: #222222;
         }
-        li a:hover {
-            /*interaction*/
-            color: #063FCB;
+        li a:hover{
+        /* interactive element */
+        color: #063FCB;
+        }
+        .navbar {
+            width: 15%;
+            float: left;
         }
         /*main*/
         .main {
             width: 85%;
             float: right;
-            margin-left: 32px;
-            margin-right: 32px;
+        }
+        .button {
+            margin-bottom: 32px;
+            background-color: white; 
+            font-family: "Karla";
+            font-size: 16px;
+            text-align: center;
+            transition-duration: 0.45s;
+            padding: 12px 24px;
+            margin-top: 12px;
+            margin-bottom: 32px;
+            border-radius: 100px;
+            border: 1px solid var(--blue, #0040DD);
+            display: inline-block;
+        }
+        .button:hover {
+            border-radius: 100px;
+            border: 1px solid var(--blue, #0040DD);
+            background-color: #EAF0FF;
+        }
+        table {
+        width: 100%;
+        }
+        th, td {
+            padding-top: 8px;
+            padding-bottom: 8px;
+        }
+        th {
+            text-align: left;
+            font-weight: normal;
+            color:#063FCB;
         }
     </style>
     <body>
-        <!--navbar-->
         <div id="navbar">
-            <!--unordered list-->
+            <!--navigation bar-->
             <ul>
-                <li><a href="#home"><img src="angela_illustrator 1.png" alt="chibi styled drawing of a smiling girl with long brown hair" width="72px" height="103px" style="margin-bottom: 5px"></a></li>
+                <li><a href="#home"><img src="angela_illustrator 1.png" alt="chibi styled drawing of a smiling girl with long brown hair" width="72px" height="103px" style="margin-bottom:5px;"></a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#works">WORKS</a></li>
                 <li><a href="#experience">EXPERIENCE</a></li>
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
         </div>
-        <!--website content-->
         <div class="main">
+            <div id="about">
+                <p style="color: #063FCB">ABOUT</p>
+                <h1>A product designer that strives to spark joy and uplift in story, interaction, and craft.</h1>
+                <h3>Currently studying @ <a style="color:#063FCB; text-decoration: none;" href="https://uwaterloo.ca/">University of Waterloo</a></h3>
+                <button style="color:#063FCB" type="button" class="button">CONTACT</button>
+            </div>
+            <div id="experience">
+                <table>
+                    <tr>
+                        <th>EXPERIENCE</th>
+                        <th style="text-align: right">DURATION</th>
+                    </tr>
+                    <tr>
+                        <td>Design Associate <a style="color:#063FCB; text-decoration: none; font-weight: bold" href="https://nucleate.xyz/dojo/"> @ Nucleate Dojo</a></td>
+                        <td style="text-align: right; font-size: 14px;">NOV 2023 - PRESENT</td>
+                    </tr>
+                    <tr>
+                        <td>Project Team Member @ UW CUBE</td>
+                        <td style="text-align: right; font-size: 14px;">SEPT 2023 - PRESENT</td>
+                    </tr>
+                    <tr>
+                        <td>Graphic Designer <a style="color:#063FCB; text-decoration: none; font-weight: bold" href="https://waterlooblockchain.ca/">@ Waterloo Blockchain</a></td>
+                        <td style="text-align: right; font-size: 14px;">MAR 2023 - AUG 2023</td>
+                    </tr>
+                    <tr>
+                        <td>Wedding Coordinator Assistant <a style="color:#063FCB; text-decoration: none; font-weight: bold" href="https://blushandbowties.ca/"> @ Blush and Bowties</a></td>
+                        <td style="text-align: right; font-size: 14px;">JUL 2023 - PRESENT</td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </body>
 </html>
