--- a/index.html
+++ b/index.html
@@ -10,16 +10,31 @@
             font-family: "Karla", sans-serif;
         }
         h1 {
+            font-size: 40px;
             font-weight: normal;
         }
         h2 {
+            font-size: 32px;
             font-weight: normal;
         }
         h3 {
+            font-size: 24px;
             font-weight: normal;
         }
         h4 {
+            font-size: 16px;
             font-weight: normal;
+        }
+        h5 {
+            font-size: 14px;
+            font-weight: normal;
+        }
+        h6 {
+            font-size: 12px;
+            font-weight: normal;
+        }
+        p {
+            font-size: 16px;
         }
         /*navigation bar*/
         ul {
@@ -76,8 +91,8 @@
             margin-bottom: 32px;
         }
         th, td {
-            padding-top: 8px;
-            padding-bottom: 8px;
+            padding-top: 4px;
+            padding-bottom: 4px;
         }
         th {
             text-align: left;
@@ -125,18 +140,18 @@
         <div class="main">
             <div id="about">
                 <p style="color: #063FCB">ABOUT</p>
-                <h1>A product designer that strives to spark joy and uplift in story, interaction, and craft.</h1>
+                <h1 style="width: 85%">A product designer that strives to spark joy and uplift in story, interaction, and craft.</h1>
                 <h3>Currently studying @ <a style="color:#063FCB; text-decoration: none;" href="https://uwaterloo.ca/">University of Waterloo</a></h3>
                 <button style="color:#063FCB" type="button" class="button">CONTACT</button>
             </div>
             <div id="experience">
                 <table>
                     <tr>
-                        <th>EXPERIENCE</th>
-                        <th style="text-align: right">DURATION</th>
+                        <th style="padding-bottom: 20px;">EXPERIENCE</th>
+                        <th style="padding-bottom: 20px; text-align: right">DURATION</th>
                     </tr>
                     <tr>
-                        <td>Design Associate <a style="color:#063FCB; text-decoration: none; font-weight: bold" href="https://nucleate.xyz/dojo/"> @ Nucleate Dojo</a></td>
+                        <td>Design Associate <a style="color:#063FCB; text-decoration: none; font-weight: bold" href="https://dojo.nucleate.xyz/"> @ Nucleate Dojo</a></td>
                         <td style="text-align: right; font-size: 14px;">NOV 2023 - PRESENT</td>
                     </tr>
                     <tr>
