added content, formatting

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         }
         p {
             font-size: 16px;
+            width: 85%;
         }
         /*navigation bar*/
         ul {
@@ -105,6 +106,10 @@
             font-weight: normal;
             color:#063FCB;
         }
+
+        .footer {
+            padding-top: 64px;
+        }
     </style>
     <body>
         <div id="navbar">
@@ -114,6 +119,7 @@
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#experience">EXPERIENCE</a></li>
                 <li><a href="#reading">READING</a></li>
+                <li><a href="#music">MUSIC</a></li>
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
         </div>
@@ -125,7 +131,7 @@
                 <button style="color:#063FCB" type="button" class="button">CONTACT</button>
             </div>
             <div id="experience">
-                <table>
+                <table style="margin-top: 48px;">
                     <tr>
                         <th style="padding-bottom: 20px;">EXPERIENCE</th>
                         <th style="padding-bottom: 20px; text-align: right">DURATION</th>
@@ -149,19 +155,25 @@
                 </table>
             </div>
             <div id="works">
-                <p style="color:#0040DD">READINGS</p>
-                <p style="word-spacing: 1%; width: 85%">Currently, I'm assembling the portfolio case studies and pages to present. In the meanwhile, I've attached some articles and readings I enjoy or found particularly interesting! </p>
+                <p style="color:#0040DD; margin-top: 48px; margin-bottom: 24px;">READING</p>
+                <p style="word-spacing: 1%; width: 85%">Currently, I'm assembling the portfolio case studies and pages to present. In the meanwhile, I've attached some articles and readings I've read recently that I found interesting or that I enjoyed reading!</p>
                 <h3>no good alone by Rayne Fisher-Quann</h3>
+                <p>A look into social media and the idealization of living life alone in the context of lifestyle porn and language.</p>
                 <a href="https://internetprincess.substack.com/p/no-good-alone" target="_blank">Link to Article</a>
+                <h3>Feminist HCI: Taking Stock and Outlining an Agenda for Design by Shaowen Bardzell</h3>
             </div>
-            <div style="margin-top: 32px" id="contact">
-                <p style="color:#0040DD; margin-bottom: 32px;">CONTACT</p>
+            <div>
+                <p style="color:#0040DD; margin-top: 48px; margin-bottom: 24px;">MUSIC</p>
+                <p>A huge part of my life has always been music. My friends and I joke that I switched majors coming into university, as I came from a high school that had a wonderful arts/music/specifically vocal program. I adore those times dearly, and still hold close some of the pieces sung, performed and I just love music.</p>
+            </div>
+            <div style="margin-top: 16px" id="contact">
+                <p style="color:#0040DD; margin-bottom: 24px; margin-top: 48px;">CONTACT</p>
                 <a style="text-decoration: none; color:#222222; font-weight:bolder; font-size: 24px" href="https://www.linkedin.com/in/angela-li-link/">LinkedIn</a><br/>
                 <a style="text-decoration: none; color:#222222; font-weight:bolder; font-size: 24px" href="mailto:a47li@uwaterloo.ca">Email</a>
             </div>
             <div id="footer">
                 <footer>
-                    <p style="color:#0040DD; font-size:12px">MADE WITH LOVE & GREEN APPLE HI-CHEWS</p>
+                    <p style="padding-top: 48px; color:#0040DD; font-size:12px">MADE WITH LOVE & GREEN APPLE HI-CHEWS</p>
                 </footer>
             </div>
         </div>
