--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
             font-weight: normal;
             color:#063FCB;
         }
-
         .footer {
             padding-top: 64px;
         }
@@ -154,17 +153,71 @@
                     </tr>
                 </table>
             </div>
-            <div id="works">
+            <div id="reading">
                 <p style="color:#0040DD; margin-top: 48px; margin-bottom: 24px;">READING</p>
-                <p style="word-spacing: 1%; width: 85%">Currently, I'm assembling the portfolio case studies and pages to present. In the meanwhile, I've attached some articles and readings I've read recently that I found interesting or that I enjoyed reading!</p>
-                <h3>no good alone by Rayne Fisher-Quann</h3>
-                <p>A look into social media and the idealization of living life alone in the context of lifestyle porn and language.</p>
-                <a href="https://internetprincess.substack.com/p/no-good-alone" target="_blank">Link to Article</a>
-                <h3>Feminist HCI: Taking Stock and Outlining an Agenda for Design by Shaowen Bardzell</h3>
+                <p>Currently assembling my work for the finished portfolio, however, I've been doing more reading recently. So in place of work, I've added some articles, and other readings that I've read recently and was interested in or found enjoyable!</p>
+                <table>
+                    <tr>
+                        <th style="font-weight:bolder">NAME & AUTHOR</th>
+                        <th style="font-weight:bolder">LINK/PLATFORM</th>
+                    </tr>
+                    <tr>
+                        <td>no good alone by Rayne Fisher-Quann</td>
+                        <td><a href="https://internetprincess.substack.com/p/no-good-alone" target="_blank">Substack</a></td>
+                    </tr>
+                    <tr>
+                        <td>Feminist HCI: Taking Stock and Outlining an Agenda for Design by Shaowen Bardzell</td>
+                        <td>the UW library!</td>
+                    </tr>
+                </table>
             </div>
-            <div>
+            <div id="music">
                 <p style="color:#0040DD; margin-top: 48px; margin-bottom: 24px;">MUSIC</p>
-                <p>A huge part of my life has always been music. My friends and I joke that I switched majors coming into university, as I came from a high school that had a wonderful arts/music/specifically vocal program. I adore those times dearly, and still hold close some of the pieces sung, performed and I just love music.</p>
+                <p>A huge part of my life has always been music. I came from a high school that had a wonderful arts/music/specifically vocal program. I adore those times dearly, and still hold close some of the pieces sung, performed and I just love music. Anyways, here's a list of recommendations! They come from various points in my life (now, high school, etc.)</p>
+                <table>
+                    <tr>
+                        <th style="width: 7%">GENRE</th>
+                        <th style="width: 48%">TITLE</th>
+                        <th style="width: 25%">ARTIST</th>
+                        <th style="width: 5%; text-align: right">DURATION</th>
+                    </tr>
+                    <tr>
+                        <td>CLASSICAL</td>
+                        <td>Act I: Libiamo ne'ileti cailci from La traviata</td>
+                        <td>Giuseppe Verdi</td>
+                        <td style="text-align: right">2:55</td>
+                    </tr>
+                    <tr>
+                        <td>POP</td>
+                        <td>Just Like Chet</td>
+                        <td>Laufey</td>
+                        <td style="text-align: right">3:36</td>
+                    </tr>
+                    <tr>
+                        <td>POP</td>
+                        <td>love.</td>
+                        <td>wave to earth</td>
+                        <td style="text-align: right">5:07</td>
+                    </tr>
+                    <tr>
+                        <td>CLASSICAL</td>
+                        <td>An die Musik, D. 547</td>
+                        <td>Franz Schubert</td>
+                        <td style="text-align: right">2:56</td>
+                    </tr>
+                    <tr>
+                        <td>GAMES</td>
+                        <td>sans.</td>
+                        <td>Toby Fox</td>
+                        <td style="text-align: right">0:51</td>
+                    </tr>
+                    <tr>
+                        <td>JAZZ</td>
+                        <td>I'm in the Mood for Love</td>
+                        <td>Julie London</td>
+                        <td style="text-align: right">2:29</td>
+                    </tr>
+                </table>
             </div>
             <div style="margin-top: 16px" id="contact">
                 <p style="color:#0040DD; margin-bottom: 24px; margin-top: 48px;">CONTACT</p>
@@ -173,7 +226,7 @@
             </div>
             <div id="footer">
                 <footer>
-                    <p style="padding-top: 48px; color:#0040DD; font-size:12px">MADE WITH LOVE & GREEN APPLE HI-CHEWS</p>
+                    <p style="padding-top: 48px; color:#0040DD; font-size:12px">MADE WITH LOVE & GREEN APPLE HI-CHEWS. 2023.</p>
                 </footer>
             </div>
         </div>
