changed content, added links

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             width: 85%;
             float: right;
         }
+        /*contact button*/
         .button {
             background-color: white; 
             font-family: "Karla";
@@ -93,6 +94,8 @@
             border: 1px solid #0040DD;
             background-color: #EAF0FF;
         }
+        /*active state*/
+        /*visited state*/
         table {
             width: 85%;
             margin-bottom: 32px;
@@ -127,7 +130,7 @@
                 <p style="color: #063FCB">ABOUT</p>
                 <h1 style="width: 85%">A product designer that strives to spark joy and uplift in story, interaction, and craft.</h1>
                 <h3>Currently studying @ <a style="color:#063FCB; text-decoration: none;" href="https://uwaterloo.ca/">University of Waterloo</a></h3>
-                <button style="color:#063FCB" type="button" class="button">CONTACT</button>
+                <a href="mailto: a47li@uwaterloo.ca"><button style="color:#063FCB" type="button" class="button" href="mailto: a47li@uwaterloo.ca">EMAIL</button></a>
             </div>
             <div id="experience">
                 <table style="margin-top: 48px;">
@@ -140,16 +143,16 @@
                         <td style="text-align: right; font-size: 14px;">NOV 2023 - PRESENT</td>
                     </tr>
                     <tr>
+                        <td>Wedding Coordinator Assistant <a style="color:#063FCB; text-decoration: none; font-weight: bold" href="https://blushandbowties.ca/" target="_blank"> @ Blush and Bowties</a></td>
+                        <td style="text-align: right; font-size: 14px;">JUL 2023 - PRESENT</td>
+                    </tr>
+                    <tr>
                         <td>Project Team Member @ UW CUBE</td>
-                        <td style="text-align: right; font-size: 14px;">SEPT 2023 - PRESENT</td>
+                        <td style="text-align: right; font-size: 14px;">SEPT 2023 - DEC 2023</td>
                     </tr>
                     <tr>
                         <td>Graphic Designer <a style="color:#063FCB; text-decoration: none; font-weight: bold" href="https://waterlooblockchain.ca/" target="_blank">@ Waterloo Blockchain</a></td>
                         <td style="text-align: right; font-size: 14px;">MAR 2023 - AUG 2023</td>
-                    </tr>
-                    <tr>
-                        <td>Wedding Coordinator Assistant <a style="color:#063FCB; text-decoration: none; font-weight: bold" href="https://blushandbowties.ca/" target="_blank"> @ Blush and Bowties</a></td>
-                        <td style="text-align: right; font-size: 14px;">JUL 2023 - PRESENT</td>
                     </tr>
                 </table>
             </div>
@@ -173,7 +176,7 @@
             </div>
             <div id="music">
                 <p style="color:#0040DD; margin-top: 48px; margin-bottom: 24px;">MUSIC</p>
-                <p>A huge part of my life has always been music. I came from a high school that had a wonderful arts/music/specifically vocal program. I adore those times dearly, and still hold close some of the pieces sung, performed and I just love music. Anyways, here's a list of recommendations! They come from various points in my life (now, high school, etc.)</p>
+                <p>Here are some recommendations I have!</p>
                 <table>
                     <tr>
                         <th style="width: 7%">GENRE</th>
@@ -217,12 +220,18 @@
                         <td>Julie London</td>
                         <td style="text-align: right">2:29</td>
                     </tr>
+                    <tr>
+                        <td>POP</td>
+                        <td>Shinunoga E-Wa</td>
+                        <td>Fujii Kaze</td>
+                        <td style="text-align: right">3:05</td>
+                    </tr>
                 </table>
             </div>
             <div style="margin-top: 16px" id="contact">
                 <p style="color:#0040DD; margin-bottom: 24px; margin-top: 48px;">CONTACT</p>
-                <a style="text-decoration: none; color:#222222; font-weight:bolder; font-size: 24px" href="https://www.linkedin.com/in/angela-li-link/">LinkedIn</a><br/>
-                <a style="text-decoration: none; color:#222222; font-weight:bolder; font-size: 24px" href="mailto:a47li@uwaterloo.ca">Email</a>
+                <a style="text-decoration: none; color:#222222; font-weight:bolder; font-size: 24px" href="https://www.linkedin.com/in/angela-li-link/" target="_blank">LinkedIn</a><br>
+                <a style="text-decoration: none; color:#222222; font-weight:bolder; font-size: 24px" href="mailto:a47li@uwaterloo.ca" target="_blank">Email</a>
             </div>
             <div id="footer">
                 <footer>
